; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_kern_descrip.c_fo_write.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_kern_descrip.c_fo_write.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fileproc = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { {}* }
%struct.uio = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @fo_write(%struct.fileproc* %0, %struct.uio* %1, i32 %2, i32 %3) #0 {
  %5 = alloca %struct.fileproc*, align 8
  %6 = alloca %struct.uio*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store %struct.fileproc* %0, %struct.fileproc** %5, align 8
  store %struct.uio* %1, %struct.uio** %6, align 8
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %9 = load %struct.fileproc*, %struct.fileproc** %5, align 8
  %10 = getelementptr inbounds %struct.fileproc, %struct.fileproc* %9, i32 0, i32 0
  %11 = load %struct.TYPE_2__*, %struct.TYPE_2__** %10, align 8
  %12 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i32 0, i32 0
  %13 = bitcast {}** %12 to i32 (%struct.fileproc*, %struct.uio*, i32, i32)**
  %14 = load i32 (%struct.fileproc*, %struct.uio*, i32, i32)*, i32 (%struct.fileproc*, %struct.uio*, i32, i32)** %13, align 8
  %15 = load %struct.fileproc*, %struct.fileproc** %5, align 8
  %16 = load %struct.uio*, %struct.uio** %6, align 8
  %17 = load i32, i32* %7, align 4
  %18 = load i32, i32* %8, align 4
  %19 = call i32 %14(%struct.fileproc* %15, %struct.uio* %16, i32 %17, i32 %18)
  ret i32 %19
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
